--- a/html/All Course.html
+++ b/html/All Course.html
@@ -76,42 +76,36 @@
         <section class="home-Container flex flex-col justify-center items-center w-[100%] h-auto">
             <!-- Row 1 -->
             <div class="row1 bg-[#EEFBF3] w-[100%] grid grid-cols-1 lg:grid-cols-2 gap-0">
-                <div class="box1 flex flex-col justify-start mt-5 ml-[4.5rem]">
-                    <h2 class="text-[1rem] md:text-[1.5rem]">Start your favourite</h2>
-                    <h1 class="text-[2rem] md:text-[3rem]">Now learning from</h1>
-                    <h1 class="text-[2rem] md:text-[3rem]">anywhere, and</h1>
-                    <h1 class="text-[2rem] md:text-[3rem]">build your <span class="text-[#309255]">bright</span></h1>
-                    <h1 class="text-[2rem] md:text-[3rem]"><span class="text-[#309255]">career</span></h1>
-                    <h3 class="text-[1rem] md:text-[1.5rem]">It has survide not only five centuries but also</h3>
-                    <h3 class="text-[1rem] md:text-[1.5rem]">the leap into electro nic typesetting</h3>
-                    <button class="bg-green-500 text-white px-4 py-2 rounded-md transition duration-200 hover:bg-gray-500 mt-7 mb-7 w-1/2">Subscribe</button>
+                <div class="box1 flex flex-col justify-center items-center mt-5 ml-[4.5rem]">
+                    <h1 class="text-[2rem] md:text-[3rem]">All <span class="text-[#309255]">Course</span></h1>
+                    <h3 class="text-[1.5rem] md:text-[2.2rem] mt-8 mb-20 pr-5">Welcome to our tech-focused e-learning platform! Dive into the world of technologies and programming with us.</h3>
                 </div>
                 <div class="box2 flex items-center justify-center lg:justify-end">
                     <img src="../img/home page photo.webp" alt="">
                 </div>
             </div>
             <!-- Row 2 -->
-            <div class="row2 flex fle items-center justify-start mt-3 w-[90%] bg-green-100"><h1 class="text-[2rem] h-[3.5rem] font-semibold text-[#309255] w-[100%]">Basic programming</h1></div>
+            <div class="row2 flex fle items-center justify-start mt-3 w-[90%] bg-green-100"><h1 class="text-[1.5rem] md:text-[2rem] h-[2.7rem] md:h-[3.5rem] font-semibold text-[#309255] w-[100%]">Basic programming</h1></div>
             <!-- Row 3 -->
-            <div id="item-all1" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-3 mt-2 justify-center">
+            <div id="item-all1" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-5 mt-2 justify-center">
                 <!-- card items -->
             </div>
             <!-- Row 4 -->
-            <div class="row2 flex fle items-center justify-start mt-3 w-[90%] bg-green-100"><h1 class="text-[2rem] h-[3.5rem] font-semibold text-[#309255] w-[100%]">Web Development</h1></div>
+            <div class="row2 flex fle items-center justify-start mt-3 w-[90%] bg-green-100"><h1 class="text-[1.5rem] md:text-[2rem] h-[2.7rem] md:h-[3.5rem]  font-semibold text-[#309255] w-[100%]">Web Development</h1></div>
             <!-- Row 5 -->
-            <div id="item-all2" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-3 mt-2 justify-center">
+            <div id="item-all2" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-5 mt-2 justify-center">
                 <!-- card items -->
             </div>
              <!-- Row 6 -->
-             <div class="row2 flex fle items-center justify-start mt-3 w-[90%] bg-green-100"><h1 class="text-[2rem] h-[3.5rem] font-semibold text-[#309255] w-[100%]">Mobile Development</h1></div>
+             <div class="row2 flex fle items-center justify-start mt-3 w-[90%] bg-green-100"><h1 class="text-[1.5rem] md:text-[2rem] h-[2.7rem] md:h-[3.5rem]  font-semibold text-[#309255] w-[100%]">Mobile Development</h1></div>
              <!-- Row 7 -->
-             <div id="item-all3" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-3 mt-2 justify-center">
+             <div id="item-all3" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-5 mt-2 justify-center">
                  <!-- card items -->
              </div>
               <!-- Row 8 -->
-            <div class="row2 flex fle items-center justify-start mt-3 w-[90%] bg-green-100"><h1 class="text-[2rem] h-[3.5rem] font-semibold text-[#309255] w-[100%]">Database</h1></div>
+            <div class="row2 flex fle items-center justify-start mt-3 w-[90%] bg-green-100"><h1 class="text-[1.5rem] md:text-[2rem] h-[2.7rem] md:h-[3.5rem]  font-semibold text-[#309255] w-[100%]">Database</h1></div>
             <!-- Row 9 -->
-            <div id="item-all4" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-3 mt-2 justify-center">
+            <div id="item-all4" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-5 mt-2 justify-center">
                 <!-- card items -->
             </div>
     
