--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                             in</button></li>
                     <!-- New Get Started Button -->
                     <li><button type="button"
-                            class="block w-full py-2 px-4 text-white bg-green-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2">Sign Up
-                        </button></li>
+                        class="block w-full py-2 px-4 text-white bg-green-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2">Sign Up
+                    </button></li>
                 </ul>
             </div>
             <!-- Menu items for larger screens -->
@@ -84,16 +84,16 @@
                     <h1 class="text-[2rem] md:text-[3rem]"><span class="text-[#309255]">career</span></h1>
                     <h3 class="text-[1rem] md:text-[1.5rem]">It has survide not only five centuries but also</h3>
                     <h3 class="text-[1rem] md:text-[1.5rem]">the leap into electro nic typesetting</h3>
-                    <button class="bg-green-500 text-white px-4 py-2 rounded-md transition duration-200 hover:bg-gray-500 mt-7 mb-7 w-1/2">Subscribe</button>
+                    <button class="bg-green-500 text-white px-4 py-2 rounded-md transition duration-200 hover:bg-gray-500 mt-7 mb-7 w-1/2">Enroll Now</button>
                 </div>
-                <div class="box2 flex items-center justify-center lg:justify-end">
+                <div class="text-[1rem] md:text-[1.5rem] box2 flex items-center justify-center lg:justify-end">
                     <img src="img/home page photo.webp" alt="">
                 </div>
             </div>
             <!-- Row 2 -->
             <div class="row2 flex fle items-center justify-start mt-3 w-[90%]"><h1 class="text-[2rem] h-[3.5rem] font-semibold text-[#309255] w-[100%]">Most popular course</h1></div>
             <!-- Row 3 -->
-            <div id="item-home1" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-3 mt-2 justify-center">
+            <div id="item-home1" class="row3 w-[90%] h-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-5 mt-2 justify-center">
                 <!-- card items -->
             </div>
     
