--- a/html/About Us.html
+++ b/html/About Us.html
@@ -76,18 +76,12 @@
         <section class="home-Container flex flex-col justify-center items-center w-[100%] h-auto">
             <!-- Row 1 -->
             <div class="row1 bg-[#EEFBF3] w-[100%] grid grid-cols-1 lg:grid-cols-2 gap-0">
-                <div class="box1 flex flex-col justify-start mt-5 ml-[4.5rem]">
-                    <h2 class="text-[1rem] md:text-[1.5rem]">Start your favourite</h2>
-                    <h1 class="text-[2rem] md:text-[3rem]">Now learning from</h1>
-                    <h1 class="text-[2rem] md:text-[3rem]">anywhere, and</h1>
-                    <h1 class="text-[2rem] md:text-[3rem]">build your <span class="text-[#309255]">bright</span></h1>
-                    <h1 class="text-[2rem] md:text-[3rem]"><span class="text-[#309255]">career</span></h1>
-                    <h3 class="text-[1rem] md:text-[1.5rem]">It has survide not only five centuries but also</h3>
-                    <h3 class="text-[1rem] md:text-[1.5rem]">the leap into electro nic typesetting</h3>
-                    <button class="bg-green-500 text-white px-4 py-2 rounded-md transition duration-200 hover:bg-gray-500 mt-7 mb-7 w-1/2">Subscribe</button>
+                <div class="box1 flex flex-col justify-center items-center mt-5 ml-[4.5rem]">
+                    <h1 class="text-[2rem] md:text-[3rem]">About <span class="text-[#309255]">Us</span></h1>
+                    <h3 class="text-[1rem] md:text-[1.5rem]">Welcome to our e-learning school! At ESA School, we are dedicated to providing quality education through innovative online platforms. Our mission is to empower students with the knowledge and skills they need to succeed in today's dynamic world. With experienced instructors, interactive learning materials, and a supportive community, we strive to make learning accessible, engaging, and rewarding for all. Join us on this journey of discovery and personal growth!"</h3>
                 </div>
                 <div class="box2 flex items-center justify-center lg:justify-end">
-                    <img src="../img/home page photo.webp" alt="">
+                    <img src="../img/about us1.png" alt="">
                 </div>
             </div>
             <!-- Row 2 -->
