--- a/html/Detail.html
+++ b/html/Detail.html
@@ -76,22 +76,27 @@
         <section class="home-Container flex flex-col justify-center items-center w-[100%] h-auto">
             <!-- Row 1 -->
             <div class="row1 bg-[#EEFBF3] w-[100%] grid grid-cols-1 lg:grid-cols-2 gap-0">
-                <div class="box1 flex flex-col justify-start mt-5 ml-[4.5rem]">
-                    <h2 class="text-[1rem] md:text-[1.5rem]">Start your favourite</h2>
-                    <h1 class="text-[2rem] md:text-[3rem]">Now learning from</h1>
-                    <h1 class="text-[2rem] md:text-[3rem]">anywhere, and</h1>
-                    <h1 class="text-[2rem] md:text-[3rem]">build your <span class="text-[#309255]">bright</span></h1>
-                    <h1 class="text-[2rem] md:text-[3rem]"><span class="text-[#309255]">career</span></h1>
-                    <h3 class="text-[1rem] md:text-[1.5rem]">It has survide not only five centuries but also</h3>
-                    <h3 class="text-[1rem] md:text-[1.5rem]">the leap into electro nic typesetting</h3>
-                    <button class="bg-green-500 text-white px-4 py-2 rounded-md transition duration-200 hover:bg-gray-500 mt-7 mb-7 w-1/2">Subscribe</button>
+                <div class="box1 flex flex-col justify-center items-center mb-5 ml-[2.5rem] md:ml-[4.5rem]">
+                    <h1 class="text-[2rem] md:text-[3rem]">Course <span class="text-[#309255]">Detail</span></h1>
+                    <h3 class="text-[1.5rem] md:text-[2.2rem] mt-8 pr-5">Explore our All Courses page, your gateway to a world of programming and technology education. From beginner basics to advanced techniques.</h3>
+                    <h3 class="text-[1.5rem] md:text-[2.2rem] mt-8 mb-10 pr-5"><span class="text-[#309255] text-[1.5rem] md:text-[2.2rem]">Start your learning journey today</span> and unlock the power of coding and technology!</h3>
                 </div>
-                <div class="box2 flex items-center justify-center lg:justify-end">
-                    <img src="../img/home page photo.webp" alt="">
+                <div class="box2 flex items-center justify-center lg:justify-end m-4">
+                    <img src="../img/course deatil.webp" alt="">
                 </div>
             </div>
             <!-- Row 2 -->
-            <div class="row2 flex fle items-center justify-start mt-3 w-[90%]"><h1 class="text-[2rem] h-[3.5rem] font-semibold text-[#309255] w-[100%]">Most popular course</h1></div>
+            <div class="row2 flex fle  justify-center items-center mt-3 w-[90%]">
+                <!-- left -->
+                 <div class="bg-gray-900 w-[75%]">
+                    s
+                 </div>
+                 <!-- right -->
+                 <div class="bg-gray-100 w-[25%]">
+                        s
+                 </div>
+            </div>
+            
             <!-- Row 3 -->
     
             <!-- Row 4 -->
