--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@
             <!-- Row 1 -->
             <div class="row1 bg-[#EEFBF3] w-[100%] grid grid-cols-1 lg:grid-cols-2 gap-0">
                 <div class="box1 flex flex-col justify-start mt-5 ml-[4.5rem]">
-                    <h2 class="text-[1rem] md:text-[1.5rem]">Start your favourite</h2>
+                    <h2 class="text-[1rem] md:text-[1.5rem] mb-5 mt-5">Start your favourite</h2>
                     <h1 class="text-[2rem] md:text-[3rem]">Now learning from</h1>
                     <h1 class="text-[2rem] md:text-[3rem]">anywhere, and</h1>
                     <h1 class="text-[2rem] md:text-[3rem]">build your <span class="text-[#309255]">bright</span></h1>
                     <h1 class="text-[2rem] md:text-[3rem]"><span class="text-[#309255]">career</span></h1>
-                    <h3 class="text-[1rem] md:text-[1.5rem]">It has survide not only five centuries but also</h3>
-                    <h3 class="text-[1rem] md:text-[1.5rem]">the leap into electro nic typesetting</h3>
+                    <h3 class="text-[1rem] md:text-[1.5rem]">It has survide not only five centuries but also the leap into electro nic typesetting</h3>
                     <button class="bg-green-500 text-white px-4 py-2 rounded-md transition duration-200 hover:bg-gray-500 mt-7 mb-7 w-1/2">Enroll Now</button>
                 </div>
                 <div class="text-[1rem] md:text-[1.5rem] box2 flex items-center justify-center lg:justify-end">
