--- a/html/All Course.html
+++ b/html/All Course.html
@@ -76,12 +76,12 @@
         <section class="home-Container flex flex-col justify-center items-center w-[100%] h-auto">
             <!-- Row 1 -->
             <div class="row1 bg-[#EEFBF3] w-[100%] grid grid-cols-1 lg:grid-cols-2 gap-0">
-                <div class="box1 flex flex-col justify-center items-center mt-5 ml-[4.5rem]">
+                <div class="box1 flex flex-col justify-center items-center mb-5 ml-[4.5rem]">
                     <h1 class="text-[2rem] md:text-[3rem]">All <span class="text-[#309255]">Course</span></h1>
                     <h3 class="text-[1.5rem] md:text-[2.2rem] mt-8 mb-20 pr-5">Welcome to our tech-focused e-learning platform! Dive into the world of technologies and programming with us.</h3>
                 </div>
                 <div class="box2 flex items-center justify-center lg:justify-end">
-                    <img src="../img/home page photo.webp" alt="">
+                    <img src="../img/All Course.png" alt="">
                 </div>
             </div>
             <!-- Row 2 -->
