--- a/html/About Us.html
+++ b/html/About Us.html
@@ -231,9 +231,40 @@
             <img src="../img/our-team.png" alt="" />
           </div>
         </div>
-        <!-- Row 5 -->
+        <!-- Row 7 -->
         <div
-          class="row4 bg-[#309255] w-full text-white grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 mt-5 p-2"
+          class="row5 flex fle items-center justify-start mt-3 w-[90%] bg-[#EEFBF3]"
+        >
+          <h1
+            class="text-[2rem] h-[3.5rem] font-semibold text-[#309255] w-[100%]"
+          >
+            Our Team
+          </h1>
+        </div>
+        <!-- Row8  -->
+        <div
+          class="row6 text-[1.5rem] w-[90%] text-gray-500 grid grid-cols-1 mt-5 p-2"
+        >
+          <div class="box2 flex flex-col justify-center items-start">
+            <h1 class="text-[1rem] md:text-[1.5rem]">
+              Location:Cambodia No. 86A, Street 110, Russian Federation
+              Boulevard, Sangkat Teuk Laak I, Khan Toul Kork, Phnom Penh.
+            </h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]">Facebook :Psoknem</h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]">Telegram :Pov soknem</h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]">
+              Phone number: 026698212
+            </h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]">
+              Website :http://soknemsu1.kesug.com/
+            </h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]">You tube :chanel</h1>
+          </div>
+        </div>
+
+        <!-- Row 9 -->
+        <div
+          class="row9 bg-[#309255] w-full text-white grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 mt-5 p-2"
         >
           <div class="box1 flex flex-col justify-center items-center">
             <h3 class="text-[1rem] md:text-[1.5rem]">Ready to start</h3>
