--- a/html/About Us.html
+++ b/html/About Us.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="../src/output.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
@@ -247,18 +254,19 @@
         >
           <div class="box2 flex flex-col justify-center items-start">
             <h1 class="text-[1rem] md:text-[1.5rem]">
+              <i class="fa-solid fa-location-dot mr-2"></i>
               Location:Cambodia No. 86A, Street 110, Russian Federation
               Boulevard, Sangkat Teuk Laak I, Khan Toul Kork, Phnom Penh.
             </h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]">Facebook :Psoknem</h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]">Telegram :Pov soknem</h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]">
+            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-brands fa-facebook mr-2"></i> Facebook :Psoknem</h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-brands fa-telegram mr-2"></i> Telegram :Pov soknem</h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-solid fa-phone mr-2"></i>
               Phone number: 026698212
             </h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]">
+            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-solid fa-earth-americas mr-2"></i>
               Website :http://soknemsu1.kesug.com/
             </h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]">You tube :chanel</h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-brands fa-youtube mr-2"></i> You tube :chanel</h1>
           </div>
         </div>
 
