--- a/html/About Us.html
+++ b/html/About Us.html
@@ -245,7 +245,7 @@
           <h1
             class="text-[2rem] h-[3.5rem] font-semibold text-[#309255] w-[100%]"
           >
-            Our Team
+            Contact Us
           </h1>
         </div>
         <!-- Row8  -->
@@ -258,15 +258,23 @@
               Location:Cambodia No. 86A, Street 110, Russian Federation
               Boulevard, Sangkat Teuk Laak I, Khan Toul Kork, Phnom Penh.
             </h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-brands fa-facebook mr-2"></i> Facebook :Psoknem</h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-brands fa-telegram mr-2"></i> Telegram :Pov soknem</h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-solid fa-phone mr-2"></i>
+            <h1 class="text-[1rem] md:text-[1.5rem]">
+              <i class="fa-brands fa-facebook mr-2"></i> Facebook :Psoknem
+            </h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]">
+              <i class="fa-brands fa-telegram mr-2"></i> Telegram :Pov soknem
+            </h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]">
+              <i class="fa-solid fa-phone mr-2"></i>
               Phone number: 026698212
             </h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-solid fa-earth-americas mr-2"></i>
+            <h1 class="text-[1rem] md:text-[1.5rem]">
+              <i class="fa-solid fa-earth-americas mr-2"></i>
               Website :http://soknemsu1.kesug.com/
             </h1>
-            <h1 class="text-[1rem] md:text-[1.5rem]"><i class="fa-brands fa-youtube mr-2"></i> You tube :chanel</h1>
+            <h1 class="text-[1rem] md:text-[1.5rem]">
+              <i class="fa-brands fa-youtube mr-2"></i> You tube :chanel
+            </h1>
           </div>
         </div>
 
