--- a/html/About Us.html
+++ b/html/About Us.html
@@ -154,7 +154,7 @@
           class="row1 bg-[#EEFBF3] w-[100%] grid grid-cols-1 lg:grid-cols-2 gap-0"
         >
           <div
-            class="box1 flex flex-col justify-center items-center mb-5 ml-[4.5rem]"
+            class="box1 flex flex-col justify-center items-center mb-5 ml-[4.5rem] mr-5"
           >
             <h1 class="text-[2rem] md:text-[3rem]">
               About <span class="text-[#309255]">Us</span>
