--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200 py-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
             <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="../img/shool logo3.png" class="h-8" alt="logo">
+                <img src="./img/shool logo3.png" class="h-8" alt="logo">
                 <span class="self-center text-2xl font-semibold whitespace-nowrap">ESA School</span>
             </a>
             <!-- Sign-in and Get Started buttons -->
